[package]
name = "guard_extraction"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolean_expression = { git="https://github.com/m-dahl/boolean_expression.git" }
buddy-rs = { path="../buddy-sys/buddy-rs/" }
itertools = "0.8.1"
