[package]
name = "guard_extraction"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy-rs = { git = "https://github.com/m-dahl/buddy-rs" }
espresso-rs = { git = "https://github.com/m-dahl/espresso-rs" }
itertools = "0.8.1"
